--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "spec-tailwind-ui",
   "description": "React UI components based on TailwindCss (opinionated)",
-  "version": "1.0.15",
+  "version": "1.0.18",
   "keywords": [
     "tailwindcss",
     "react"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kevin4885/spec-tailwind-ui"
+    "url": "git+https://github.com/kevin4885/spec-tailwind-ui.git"
   },
   "main": "dist/spec-tailwind-ui.umd.js",
   "author": "kevin4885",
