--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spec-tailwind-ui",
   "description": "React UI components based on TailwindCss (opinionated)",
-  "version": "1.0.18",
+  "version": "1.0.25",
   "keywords": [
     "tailwindcss",
     "react"
@@ -32,10 +32,12 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@floating-ui/react": "^0.26.16",
+    "immer": "^10.1.1",
     "jotai-zustand": "^0.4.0",
     "libphonenumber-js": "^1.11.2",
     "react-icomoon": "^2.5.7",
     "react-responsive": "^10.0.0",
+    "vite-plugin-css": "^1.0.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
